<resources>
    <string name="app_name">Pirate</string>
    <string name="create_account_enter_password">Enter Password</string>
    <string name="create_account_reenter_password">Confirm Your Password</string>
    <string name="create_account_enter_pirate_password">Enter pirate Password here..</string>
    <string name="enter_ethereum_password">Enter Ethereum Password</string>
    <string name="enter_password_again">Confirm Your Password</string>
    <string name="password">Password:</string>
    <string name="remember_password">Remember password</string>
    <string name="creating_tx">Creating Blockchain Tx…</string>
    <string name="approving">Blockchain \nApproving…</string>
    <string name="approve_error">approve error!</string>
    <string name="createAccount">Create Account</string>
    <string name="Import">Import</string>
    <string name="refresh">Refresh</string>
    <string name="rationale_extra_write">Need to apply for read and write memory permissions</string>
    <string name="camera">Camera access required</string>
    <string name="ethLabel">ETH</string>
    <string name="bindActionTxt">Bind</string>
    <string name="hop">HOP</string>
    <string name="back">back</string>
    <string name="operationHelp">Notifications</string>
    <string name="globalModelTips">Global</string>
    <string name="unread_data">Unread data</string>
    <string name="invalid_scan_code"> Invalid scan code</string>
    <string name="import_account_failed">Import account failed</string>
    <string name="error_import_image">Error: import image</string>
    <string name="import_error">Import eror</string>
    <string name="use">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="sure_replace">Are you sure you want to replace it？</string>
    <string name="save_ethereum_account">Import account will replace the current Ethereum account. Please ensure that you have saved the current account.</string>
    <string name="save_pirate_account">Import account will replace the current pirate account. Please ensure that you have saved the current account.</string>
    <string name="scanning_qr_code">Scanning QR code</string>
    <string name="read_album">Read from the media</string>
    <string name="cancel">Cancel</string>
    <string name="select_import_mode">Please select the import mode.</string>
    <string name="scan_pirate_account_qr">Please scan the pirate account QR code</string>
    <string name="scan_eth_address_qr">Please scan the eth address QR code</string>
    <string name="sure">OK</string>
    <string name="twice_password_not_same">Inconsistent password input twice</string>
    <string name="copy_success">Copy successed!</string>
    <string name="save_to_album">Successfully saved to media</string>
    <string name="import_success">Import success</string>
    <string name="empty_account">Empty Account</string>
    <string name="pirate_account">pirate Account</string>
    <string name="create_account_success">Create an account successfully</string>
    <string name="loading">Loading&#8230;</string>
    <string name="loading_success">Load success</string>
    <string name="intelligentModelTips">Smart</string>
    <string name="waiting">Loading…</string>
    <string name="refresh_node">Refresh node</string>
    <string name="connect">Connecting</string>
    <string name="ImportImtokenAccount">Import from imToken</string>
    <string name="ethereum_import_tips">Suggestions：Please create an empty Ethereum account before importing it into this system. Then transfer HOP token to the new created account, and click the refresh button to reload when transaction was packaged successfully.</string>
    <string name="notification_title">pirate BlockChain network</string>
    <string name="create_account_or">or</string>
    <string name="account_address">Hop address</string>
    <string name="account_address_eth_user">ETH User</string>
    <string name="account_address_have_an_ethereum_account">Have an ethereum account</string>
    <string name="account_address_no_ethereum_account">No ethereum account</string>
    <string name="account_address_general_user">General User</string>
    <string name="skip">skip</string>
    <string name="create_account_create">create</string>
    <string name="create_account_import_account">Import Account</string>
    <string name="bind_address_general_tips">You can bind pirate account by:</string>
    <string name="general_use_describe">Send pirate address ( press and hold on pirate address to copy ) to a friend who has ethereum account</string>
    <string name="Account_address_getImtoken">How to get imtoken QR code</string>
    <string name="main_help">Help</string>
    <string name="main_address_and_operation">Address And Operation</string>
    <string name="main_account_management">Account Management</string>
    <string name="main_bind_state_unbind">Unbind</string>
    <string name="tab_home">Home</string>
    <string name="tab_flow_market">Flow Market</string>
    <string name="tab_wallet">Wallet</string>
    <string name="tab_account">Setting</string>
    <string name="tab_account_replace_account_title">Are you sure?</string>
    <string name="tab_account_replace_msg">Replace you current wallet?</string>
    <string name="tab_account_dns">DNS:</string>
    <string name="tab_account_update_dns">Update</string>
    <string name="tab_account_dns_empty">Please input a new DNS address</string>
    <string name="tab_account_dns_failed">Please enter the correct ip address</string>
    <string name="tab_account_update_dns_success">Successfully modified,Please open again</string>
    <string name="tab_account_help">Help</string>
    <string name="tab_account_operation_guide">Operation guide</string>
    <string name="tab_account_help_address">https://t.me/hopcommunity</string>
    <string name="tab_account_course">Mining course</string>
    <string name="tab_account_course_address">https://docs.hyperorchid.org/</string>
    <string name="tab_account_clear_local_data">Clear local data</string>
    <string name="tab_account_clear">Cleared successfully</string>
    <string name="tab_account_token_unit">hop</string>
    <string name="tab_account_transaction">Transaction</string>
    <string name="transaction_pending">Pending</string>
    <string name="transaction_completed">Completed</string>
    <string name="transaction_error">error</string>
    <string name="transaction_hash">Hash</string>
    <string name="my_pool">My pool</string>
    <string name="wallet_add_mine_pool">Add new mining pool</string>
    <string name="wallet_renewal_fee">Renew</string>
    <string name="wallet_flow_unit_eth">ETH</string>
    <string name="wallet_read_failed">Wallet reading failed</string>
    <string name="recharge_recharge_flow">Recharge flow</string>
    <string name="recharge_custom">customize</string>
    <string name="recharge_hop_coin">Hop balance</string>
    <string name="recharge_buy_flow">Purchase flow</string>
    <string name="recharge_hop_money">money</string>
    <string name="recharge_submit_order">Submit orders</string>
    <string name="recharge_buy_flow_number">flow(M)</string>
    <string name="recharge_recharge">Buy</string>
    <string name="recharge_buy_packets">BlockChain \nBuying packets…</string>
    <string name="recharge_sync_pool">Sync Pool</string>
    <string name="recharge_sync_pool_failed">Sync Pool failed</string>
    <string name="recharge_sync_pool_success">Sync Pool Success</string>
    <string name="recharge_buy_packets_error">Buy error</string>
    <string name="recharge_pending">The transaction is being packaged, please do not repeat the operation</string>
    <string name="hop_address">Hop address</string>
    <string name="gtn">GTN：</string>
    <string name="websiteAddress">URL：</string>
    <string name="email">Email：</string>
    <string name="mine_machine">Mine machine list</string>
    <string name="wallet_flow_unit_hop">HOP</string>
    <string name="hop_transfer_record_own_hop_coin">Own Hop Coins</string>
    <string name="hop_transfer_to_me">Transfer to you</string>
    <string name="hop_turn_out">Transfer out</string>
    <string name="hop_turn_in">Transfer into</string>
    <string name="current_use_flow">Recharge flow</string>
    <string name="uncleared_flow">Credit</string>
    <string name="main_network_address">Main net address</string>
    <string name="word_net_address">Subnet address</string>
    <string name="refresh_mine">Refresh the miner</string>
    <string name="transfer_to_money_address">Payee wallet address</string>
    <string name="transfer_to_address">Payment address：</string>
    <string name="transfer_eth_balance">Transferable %s ETH</string>
    <string name="transfer_token_balance">Transferable %s token</string>
    <string name="transfer_remarks">Notes optional</string>
    <string name="transfer_success">Transfer Success</string>
    <string name="export_fail">Export failed</string>
    <string name="transfer_check_address">Please check the address is correct</string>
    <string name="transfer_input_money_address">Please enter payee wallet address</string>
    <string name="transfer_input_transfer_out_money">Please enter the transfer amount</string>
    <string name="transferring">Transferring…</string>
    <string name="recharge_surfing_internet">Start surfing</string>
    <string name="recharge_start_immediately">start</string>
    <string name="mine_machine_measurement_network_speed">Test speed</string>
    <string name="mine_machine_list_pin_all_miners">Overall speed</string>
    <string name="main_address_tip">This address is used to recharge Token and ETH \n This address is used for network services</string>
    <string name="create">Creat/Import</string>
    <string name="export">Export Account</string>
    <string name="transfer">Transfer</string>
    <string name="creating_account">Creating account…</string>
    <string name="token">token</string>
    <string name="recharge_packets_mine_pool_address">Mining Pool Address</string>
    <string name="mining_pool_exchange_mine_pool">Switch in the mining pool…</string>
    <string name="wallet_main_address_is_null">Primary network address is empty</string>
    <string name="wallet_export_success">Export succeeded</string>
    <string name="packets_insufficient_need_recharge">Insufficient flow, need to recharge</string>
    <string name="synchronization_block">Sync block…</string>
    <string name="blockchain_time_out">Block synchronization timed out,\n Please confirm that the last block is successfully packaged and operate again</string>
    <string name="please_create_account">Please create an account first</string>
    <string name="apply_free_token_des">When eth is less than 0.05, you can apply for eth, and when hop is less than 1,000, you can apply for token</string>
    <string name="applying">applying…</string>
    <string name="apply_success">apply success</string>
    <string name="apply_timeout">apply timeout,Refresh your wallet to check the wallet status</string>
    <string name="apply_fail">apply failed</string>
    <string name="init_service_fail">Service failed to start, please start again</string>
    <string name="main_token">Main Token</string>
    <string name="balance">balance</string>
    <string name="token_symbol">Token symbol</string>
    <string name="set_as_main_token">Set As main Token</string>
    <string name="get_free_coin">get free coin</string>
    <string name="get_free_hop">1000 Hop free coin</string>
    <string name="get_free_eth">0.1 eth free coin</string>
    <string name="select_subscribed_mining_pool">Please select a mining pool that is already subscribed</string>
    <string name="select_miner">Please select a miner</string>
    <string name="empty_data">empty,Pull down to refresh</string>
    <string name="empty_order">empty,Pull down to refresh</string>
    <string name="contentDescription"> </string>
</resources>