<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <include
        layout="@layout/layout_title"
        android:id="@+id/title" />

    <TextView
        android:id="@+id/toAddressLabTv"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:text="@string/transfer_to_address"
        android:textColor="@color/color_4d4d4d"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/toAddressEt"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/toAddressLabTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toAddressLabTv"
        android:layout_marginEnd="16dp"
        android:textSize="18sp"
        android:inputType="text"
        tools:ignore="LabelFor"
        android:importantForAutofill="no"
        android:drawableBottom="@drawable/split_line"
        android:background="@android:color/transparent"
        android:hint="@string/transfer_to_money_address"
        android:layout_height="55dp" />

    <RadioGroup
        android:id="@+id/transferTypeRg"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toAddressEt"
        app:layout_constraintStart_toStartOf="@+id/toAddressLabTv"
        android:gravity="center_vertical"
        android:layout_height="90dp">

        <RadioButton
            android:id="@+id/ethRb"
            android:layout_width="wrap_content"
            android:text="@string/bnbLabel"
            android:checked="true"
            android:layout_height="45dp" />

        <RadioButton
            android:id="@+id/tokenRb"
            android:layout_width="wrap_content"
            android:text="@string/token"
            android:layout_height="45dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/ethCountTv"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:importantForAutofill="no"
        tools:ignore="LabelFor"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/toAddressEt"
        android:text="@string/transfer_eth_balance"
        android:layout_height="45dp" />

    <TextView
        android:id="@+id/tokenCountTv"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:textSize="18sp"

        tools:ignore="LabelFor"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/ethCountTv"
        android:text="@string/transfer_token_balance"
        android:layout_height="45dp" />

    <EditText
        android:id="@+id/transferNumberEt"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="@+id/toAddressLabTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:hint="@string/transfer_input_transfer_out_money"
        android:inputType="numberDecimal"
        android:importantForAutofill="no"
        android:background="@android:color/transparent"
        android:drawableBottom="@drawable/split_line"
        app:layout_constraintTop_toBottomOf="@+id/transferTypeRg"
        android:layout_height="45dp" />

    <EditText
        android:id="@+id/remarksEt"
        android:layout_width="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical"
        android:textSize="18sp"
        android:importantForAutofill="no"
        tools:ignore="LabelFor"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="text"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@+id/transferNumberEt"
        android:layout_marginTop="1dp"
        android:hint="@string/transfer_remarks"
        android:layout_height="45dp" />

    <View
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/remarksEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/split_line"
        android:layout_height="1dp"></View>

    <TextView
        android:id="@+id/transferOutTv"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/color_ffffff"
        android:text="@string/hop_turn_out"
        android:background="@drawable/bg_submit_order"
        android:layout_marginEnd="16dp"
        android:layout_height="45dp" />
</android.support.constraint.ConstraintLayout>