<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/color_ffffff"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/tab_flow_market"
        android:textColor="@color/color_4d4d4d"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myPoolTv"
        android:layout_width="wrap_content"
        android:text="@string/my_pool"
        android:textColor="@color/color_0793c2"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/titleTv"
        app:layout_constraintBottom_toBottomOf="@+id/titleTv"
        android:layout_height="wrap_content" />
    <View
        android:id="@+id/splitLine"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/split_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splitLine"
        android:layout_height="0dp">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rechargeRecycleView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>

    <ImageView
        android:id="@+id/emptyIv"
        android:layout_width="240dp"
        android:src="@drawable/empty_market"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="92dp"
        android:contentDescription="@string/contentDescription"
        android:visibility="gone"
        android:layout_height="200dp" />

    <TextView
        android:id="@+id/emptyTv"
        app:layout_constraintTop_toBottomOf="@+id/emptyIv"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="@color/color_10161c"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/empty_data"
        android:layout_height="wrap_content" />

</android.support.constraint.ConstraintLayout>