<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/color_ffffff"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleTv"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:gravity="center"
        android:text="@string/tab_wallet"
        android:textColor="@color/color_4d4d4d"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/splitLine"
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/menu_split_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTv" />




    <TextView
        android:id="@+id/hopTv"
        android:layout_width="wrap_content"
        android:text="@string/hop"
        android:textSize="14sp"
        android:textColor="@color/color_25262a"
        app:layout_constraintTop_toBottomOf="@+id/splitLine"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/hop_img"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/hopUintTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/wallet_flow_unit_hop"
        android:textColor="@color/color_717171"
        android:layout_width="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/hopNumberTv"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/hopNumberTv"
        app:layout_constraintTop_toTopOf="@+id/hopTv"
        app:layout_constraintBottom_toBottomOf="@+id/hopTv"
        app:layout_constraintEnd_toStartOf="@+id/hopUintTv"
        android:textColor="@color/color_25262a"
        android:layout_marginEnd="5dp"
        tools:text="100"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <View
        android:id="@+id/line2"
        app:layout_constraintTop_toBottomOf="@+id/hopTv"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/split_line"
        android:layout_height="1dp"/>
    <TextView
        android:id="@+id/ethTv"
        android:layout_width="wrap_content"
        android:text="@string/ethLabel"
        android:textSize="14sp"
        android:textColor="@color/color_25262a"
        app:layout_constraintTop_toBottomOf="@+id/line2"
        android:layout_marginTop="10dp"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/eth_img"
        android:layout_marginStart="10dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/ethUintTv"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/wallet_flow_unit_eth"
        android:textColor="@color/color_717171"
        android:layout_width="wrap_content"
        android:layout_marginEnd="16dp"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ethNumberTv"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/ethNumberTv"
        app:layout_constraintBottom_toBottomOf="@+id/ethTv"
        app:layout_constraintEnd_toStartOf="@+id/ethUintTv"
        app:layout_constraintTop_toTopOf="@+id/ethTv"
        tools:text="320"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/color_25262a"
        android:layout_width="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"/>

    <View
        android:id="@+id/line3"
        app:layout_constraintTop_toBottomOf="@+id/ethTv"
        android:layout_width="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:background="@drawable/split_line"
        android:layout_height="8dp"/>


    <TextView
        android:id="@+id/ownMinePool"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@+id/line3"
        android:text="@string/wallet_own_mine_pool"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        android:textColor="@color/color_4d4d4d"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_height="46dp"/>
    <TextView
        android:id="@+id/refreshMinPoolTv"
        android:layout_width="wrap_content"
        android:drawableEnd="@drawable/fresh_coin"
        android:text="@string/refresh"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@+id/ownMinePool"
        app:layout_constraintBottom_toBottomOf="@+id/ownMinePool"
        android:layout_height="wrap_content"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/minePoolRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ownMinePool"
        android:layout_width="match_parent"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/addMinePoolBgIv"
        android:layout_height="0dp"/>
    <ImageView
        android:id="@+id/addMinePoolBgIv"
        android:layout_width="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_wallet_add_minepool"
        android:layout_marginBottom="10dp"
        android:layout_height="45dp"/>
    <TextView
        android:id="@+id/addMinePoolTv"
        android:layout_width="wrap_content"
        android:text="@string/wallet_add_mine_pool"
        android:textSize="16sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@+id/addMinePoolBgIv"
        app:layout_constraintEnd_toEndOf="@+id/addMinePoolBgIv"
        app:layout_constraintTop_toTopOf="@+id/addMinePoolBgIv"
        android:drawableStart="@drawable/wallet_add_minepool"
        app:layout_constraintBottom_toBottomOf="@+id/addMinePoolBgIv"
        android:textColor="@color/color_6179b0"
        android:layout_height="44dp"/>
    <ImageView
        android:id="@+id/emptyIv"
        android:layout_width="240dp"
        android:src="@drawable/empty_order"
        app:layout_constraintTop_toBottomOf="@+id/ownMinePool"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="34dp"
        android:visibility="gone"
        android:layout_height="200dp"/>
    <TextView
        android:id="@+id/emptyTv"
        app:layout_constraintTop_toBottomOf="@+id/emptyIv"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="@color/color_10161c"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/empty_order"
        android:layout_height="wrap_content"/>
</android.support.constraint.ConstraintLayout>