<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/layout_title"
        android:id="@+id/title"/>

    <ImageView
        android:id="@+id/hopBgIv"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_wallet_hop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_height="140dp"/>
    <TextView
        android:id="@+id/ownHopCoinTv"
        android:layout_width="wrap_content"
        android:text="@string/hop_transfer_record_own_hop_coin"
        android:textColor="@color/color_ffffff"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@+id/hopBgIv"
        app:layout_constraintStart_toStartOf="@+id/hopBgIv"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/ownHopCoinCountTv"
        android:layout_width="wrap_content"
        android:textSize="28sp"
        android:textColor="@color/color_ffffff"
        android:textStyle="bold"
        android:layout_marginTop="8dp"
        tools:text="897.000000000"
        android:layout_marginStart="16dp"

        app:layout_constraintTop_toBottomOf="@+id/ownHopCoinTv"
        app:layout_constraintStart_toStartOf="@+id/hopBgIv"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/wallet_flow_unit_hop"
        android:layout_marginStart="10dp"
        android:textColor="@color/color_ffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/ownHopCoinCountTv"
        app:layout_constraintBottom_toBottomOf="@+id/ownHopCoinCountTv"
        app:layout_constraintStart_toEndOf="@+id/ownHopCoinCountTv"
        android:layout_height="wrap_content"/>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/transferRecordRecyclerView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hopBgIv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/turnOutTv"
        android:layout_width="0dp"
        android:textColor="@color/color_6179b0"
        android:textSize="16sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/transferTv"
        android:layout_marginStart="16dp"
        android:text="@string/hop_turn_out"
        android:layout_marginBottom="60dp"
        android:background="@drawable/bg_hop_transfer_turn_out"
        android:layout_height="40dp"/>

    <TextView
        android:id="@+id/transferTv"
        android:layout_width="0dp"
        android:textColor="@color/color_ffffff"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/turnOutTv"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:layout_marginEnd="16dp"
        android:textStyle="bold"
        android:text="@string/hop_turn_in"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="60dp"
        android:background="@drawable/bg_hop_transfer_transfer"
        android:layout_height="40dp"/>
</android.support.constraint.ConstraintLayout>